# Wav2vec2-Pretraining

./: pyproject.toml  run.py
