[tool.poetry]
name = "wav2vec2-pretraining"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^1.12.0"
torch = "2.2.0"
torchaudio = "2.2.0"
accelerate = "*"
librosa = "*"
transformers = "^4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
